# molgenis-py-lifelines-transform

./: .dockerignore  .gitignore  Dockerfile  Jenkinsfile  README.md  config.json.example  docker-compose.yml  pyproject.toml  setup.py  sonar-project.properties
docker/: docker-compose.yml
docker/nginx/: localhost.tpl
lifelines_transform/: __init__.py  download.py  main.py  transform.py  upload.py
meta/: attributes.tsv  entities.tsv  packages.tsv
scripts/: transform.py
src/: download.py  main.py  transform.py  upload.py
